--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,43 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  padding: 20px;
+}
+
+input {
+  font-size: 1.3rem;
+  width: 100%;
+  color: gray;
+}
+
+.card {
+  align-items: center;
+  border: 1px solid grey;
+  border-radius: 5px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  max-height: 250px;
+  max-width: 220px;
+  overflow: hidden;
+}
+
+.card p {
+  max-width: 200px;
+  padding: 10px;
+  text-align: center;
+}
+
+.card img {
+  max-height: 150px;
+  max-width: 200px;
+  display: flex;
+}
+
+.card-grid {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
